samples/_failures_safe/1761006528_57ed81_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_783fd93b.c: In function ‘main’:
./samples/SAFE/__tmp_783fd93b.c:186:12: error: missing terminating " character
  186 |     printf("0: START, 1: DATA, 2: PROCESS, 3: SUCCESS, 4: FAILURE, 5: RESET, 6: EX
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_783fd93b.c:186:5: error: expected expression at end of input
  186 |     printf("0: START, 1: DATA, 2: PROCESS, 3: SUCCESS, 4: FAILURE, 5: RESET, 6: EX
      |     ^~~~~~
./samples/SAFE/__tmp_783fd93b.c:186:5: error: expected declaration or statement at end of input
